idf_component_register(SRCS "main.cpp"
                            "http.cpp"
                            "json.cpp"
                            "tasks.cpp"
                            "wifi.cpp"
                            "ble.cpp"
                            "dht11.cpp"
                    INCLUDE_DIRS ".")
