idf_component_register(SRCS "main.cpp"
                            "http.cpp"
                            "tasks.cpp"
                            "wifi.cpp"
                            "ble.cpp"
                            "dht11.cpp"
                            "bme680.cpp"
                    INCLUDE_DIRS ".")
